<resources>
    <string name="app_name">Kinzil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="result1">Distance</string>
    <string name="result2">Duration</string>
    <string name="result3">Avg. Speed</string>
    <string name="result4">Max. Speed</string>
    <string name="result5">Calories</string>
    <string name="result6">Speed</string>
    <string name="action_settings">Settings</string>
    <string name="connection">Connection</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="about_us">About us</string>
    <string name="team">Team</string>
    //map menu
    <string name="map_settings">Settings</string>
    <string name="tracking">Tracking</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="satellite">Satellite</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="loginBig">LOGIN</string>
    <string name="zoom">Zoom:</string>
    <string name="cancel_dialog_register">Cancel</string>
    <string name="create_dialog_register">Create</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="show_route">Show route</string>
    <string name="show_secondary_route">Show secondary route</string>
    <string name="edit">Edit</string>
    <string name="weight">Weight:</string>
    <string name="wheel_size">Wheel size:</string>
    <string name="your_weight_0kg">Your weight: 0kg</string>
    <string name="wheel_size_0mm">Wheel size: 0mm</string>
    //bluetooth informations
    <string name="low_energy_bluetooth_is_not_supported">Low energy bluetooth is not supported</string>
    <string name="bluetooth_is_not_supported">bluetooth is not supported</string>
    <string name="drive_duration">Ride duration</string>
    <string name="your_overall_distance_0km">Your overall distance: 0km</string>
    <string name="distance">Distance: \u0020</string>
    <string name="date">Date: \u0020</string>
    <string name="avg_speed">Avg. speed: \u0020</string>
    <string name="duration">Duration: \u0020</string>
    <string name="max_speed">Max speed: \u0020</string>
    <string name="calories_burned">Calories burned: \u0020</string>
    <string name="Deleting_window_tittle">Deleting</string>
    <string name="Deleteing_trip_confirmation">Do you really want to delete this trip?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="Deleting_all_trips_info">Delete all trips</string>
    <string name="avg_speed_without_stops">Avg. Speed(no stops) \u0020</string>
    <string name="duration_without_stops">Duration(no stops) \u0020</string>
    <string name="speed_unit">"km/h"</string>
    <string name="calories_unit">"kcal"</string>
    <string name="distance_unit">"km"</string>

    <string-array name="spinner_item_map_menu">
        <item>Free ride(without drawing</item>
        <item>Free ride(with drawing)</item>
        <item>directed ride</item>
    </string-array>
</resources>
