<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#2a7df1">

    <TextView
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Switch
        android:text="@string/tracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tracking_switch_popup"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textOn="@string/on"
        android:textOff="@string/off" />

    <Switch
        android:text="@string/satellite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/satellite_switch_popup"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textOn="@string/on"
        android:textOff="@string/off" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/raid_type_spinner_popup"
        android:entries="@array/spinner_item_map_menu"
        android:spinnerMode="dialog"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:gravity="center">


        <Button
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button_popup"
            />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button_popup"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/save_button_popup" />
    </RelativeLayout>


</LinearLayout>