<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_weight="0.05"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"/>

    <TextView
        android:text="@string/wheel_size_0mm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wheelSize_textView"
        android:gravity="center"
        android:layout_weight="0.05"/>

    <TextView
        android:text="@string/your_weight_0kg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weight_textView"
        android:gravity="center"
        android:layout_weight="0.05"/>

    <TextView
        android:text="@string/your_overall_distance_0km"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/distance_textView"
        android:gravity="center"
        android:layout_weight="0.05"/>

    <Button
        android:text="@string/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Button"
        android:gravity="center"
        android:layout_weight="0.03" />


</LinearLayout>