<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="engineeringwork.pl.kinzil.activity.UserAddActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/PasswordText"
        android:hint="@string/password"
        android:layout_below="@+id/LoginText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/LoginText"
        android:hint="@string/username"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LoginButton"
        android:layout_alignBaseline="@+id/CreateButton"
        android:layout_alignBottom="@+id/CreateButton"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/CreateButton"
        android:layout_marginStart="14dp"
        android:layout_below="@+id/PasswordText"
        android:layout_toEndOf="@+id/LoginButton" />

    <TextView
        android:text="@string/loginBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AutologCheckBox"
        android:checked="true"
        android:text="@string/remember_me"
        android:layout_below="@+id/LoginButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

</RelativeLayout>
