<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheel_size"
            android:id="@+id/txt1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <EditText
            android:id='@+id/txt_wheel_size'
            android:layout_width='match_parent'
            android:layout_height='wrap_content'/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:id="@+id/txt2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <EditText
            android:id='@+id/txt_weight'
            android:layout_width='match_parent'
            android:layout_height='wrap_content'/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"
            android:id="@+id/txt3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <EditText
            android:id='@+id/txt_distance'
            android:layout_width='match_parent'
            android:layout_height='wrap_content'/>
    </GridLayout>


    <RelativeLayout
        android:layout_width='match_parent'
        android:layout_height='wrap_content' >

        <Button
            android:id='@+id/btn_create'
            android:layout_width='120dp'
            android:layout_height='wrap_content'
            android:text="@string/save" />

        <Button
            android:id='@+id/btn_cancel'
            android:layout_width='120dp'
            android:layout_height='wrap_content'
            android:layout_alignParentTop='true'
            android:layout_marginLeft='10dp'
            android:layout_toRightOf='@+id/btn_create'
            android:text="@string/cancel_dialog_register" />
    </RelativeLayout>
</LinearLayout>