<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".22" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_height="match_parent"
                android:layout_width="90dp"
                android:src="@mipmap/ic_speed"
                android:id="@+id/counterImageView6"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:text="@string/result6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="36px"
                    android:id="@+id/resultLabel6"
                    android:gravity="bottom"
                    android:paddingTop="@dimen/counter_header_padding_top" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/result6"
                        android:textSize="68px"
                        />

                    <TextView
                        android:text="km/h"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:textSize="36px"
                        android:layout_marginLeft="@dimen/counter_unit_margin" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".50">

            <ImageView
                android:layout_height="match_parent"
                android:src="@mipmap/ic_avg_speed"
                android:id="@+id/counterImageView7"
                android:layout_width="65dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="Avg. Speed"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:textSize="@dimen/counter_header_size"
                    android:id="@+id/resultLabel7"
                    android:layout_weight=".40"
                    android:gravity="bottom"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".60">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/result7"
                        android:textSize="@dimen/counter_value_size"
                        android:text="0" />

                    <TextView
                        android:text="km/h"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView77"
                        android:textSize="@dimen/counter_unit_size"
                        android:layout_marginLeft="@dimen/counter_unit_margin" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".50">

            <ImageView
                android:src="@mipmap/ic_hourglass"
                android:id="@+id/counterImageView2"
                android:layout_width="65dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/result2"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/counter_header_size"
                    android:id="@+id/resultLabel2"
                    android:gravity="bottom"
                    android:layout_height="0dp"
                    android:layout_weight=".40"/>

                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/result2"
                    android:textSize="@dimen/counter_value_size"
                    android:textAlignment="textStart"
                    android:text="00:00:00"
                    android:layout_height="0dp"
                    android:layout_weight=".60"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".50">

            <ImageView
                android:layout_height="match_parent"
                android:id="@+id/counterImageView3"
                android:layout_width="65dp"
                android:src="@mipmap/ic_avg_no" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/result3"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/counter_header_size"
                    android:id="@+id/resultLabel3"
                    android:gravity="bottom"
                    android:layout_height="0dp"
                    android:layout_weight=".40"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".60">

                    <TextView
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/result3"
                        android:textSize="@dimen/counter_value_size" />

                    <TextView
                        android:text="km/h"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView9"
                        android:textSize="@dimen/counter_unit_size"
                        android:layout_marginLeft="@dimen/counter_unit_margin" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".50">

            <ImageView
                android:src="@mipmap/ic_hourglass_no"
                android:id="@+id/counterImageView8"
                android:layout_width="65dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/drive_duration"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/counter_header_size"
                    android:id="@+id/resultLabel8"
                    android:gravity="bottom"
                    android:layout_height="0dp"
                    android:layout_weight=".40" />
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/timeWithStops"
                    android:textSize="@dimen/counter_value_size"
                    android:text="00:00:00"
                    android:layout_height="0dp"
                    android:layout_weight=".60" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".50">

            <ImageView
                android:layout_height="match_parent"
                android:src="@mipmap/ic_path"
                android:id="@+id/counterImageView1"
                android:layout_width="65dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="Overall "
                    android:layout_width="match_parent"
                    android:textSize="@dimen/counter_header_size"
                    android:id="@+id/resultLabel1"
                    android:gravity="bottom"
                    android:layout_height="0dp"
                    android:layout_weight=".40" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".60" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/result1"
                        android:textSize="@dimen/counter_value_size"
                        android:text="0" />

                    <TextView
                        android:text="km"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:textSize="@dimen/counter_unit_size"
                        android:layout_marginLeft="@dimen/counter_unit_margin" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".50">

            <ImageView
                android:layout_height="match_parent"
                android:src="@mipmap/ic_path"
                android:id="@+id/counterImageView9"
                android:layout_width="65dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/result1"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/counter_header_size"
                    android:id="@+id/resultLabel9"
                    android:gravity="bottom"
                    android:layout_height="0dp"
                    android:layout_weight=".40" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".60" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/result9"
                        android:textSize="@dimen/counter_value_size"
                        android:text="0" />

                    <TextView
                        android:text="km"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView99"
                        android:textSize="@dimen/counter_unit_size"
                        android:layout_marginLeft="@dimen/counter_unit_margin" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".15">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".50">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_flame"
                android:id="@+id/counterImageView5" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/result5"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/counter_header_size"
                    android:id="@+id/resultLabel5"
                    android:gravity="bottom"
                    android:layout_height="0dp"
                    android:layout_weight=".40" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".60" >

                    <TextView
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/result5"
                        android:textSize="@dimen/counter_value_size"
                        android:textAlignment="textStart" />

                    <TextView
                        android:text="kcal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView10"
                        android:textSize="@dimen/counter_unit_size"
                        android:layout_marginLeft="@dimen/counter_unit_margin" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".50">

            <ImageView
                android:layout_height="match_parent"
                android:src="@mipmap/ic_maxspeed"
                android:id="@+id/counterImageView4"
                android:layout_width="65dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/result4"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/counter_header_size"
                    android:id="@+id/resultLabel4"
                    android:gravity="bottom"
                    android:layout_height="0dp"
                    android:layout_weight=".40"  />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".60" >

                    <TextView
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/result4"
                        android:textSize="@dimen/counter_value_size"
                        android:textAlignment="textStart"
                        android:elevation="1dp" />

                    <TextView
                        android:text="km/h"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:textSize="@dimen/counter_unit_size"
                        android:layout_marginLeft="@dimen/counter_unit_margin" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="START"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/startTrip"
        android:layout_weight=".1"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/StateView"
        android:layout_span="1"
        android:layout_height="0dp"
        android:layout_weight=".08"
        android:textAlignment="center" />
</LinearLayout>